# stager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  PUBLIC_RELEASE_CHECKLIST.md  README-mom.ru.md  README-user.ru.md  README.md  REPO_STRUCTURE.md  ROADMAP.md  UAT.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  cli.py  deps.py  main.py  rate_limit.py  security.py
apps/api/routers/: auth.py  expenses.py  invites.py  projects.py  reports.py
apps/api/schemas/: __init__.py  auth.py  expenses.py  invites.py  projects.py  reports.py
apps/bot/: Dockerfile  drafts.py  keyboards.py  main.py  middlewares.py
apps/bot/fsm/: states.py
apps/bot/handlers/: expenses.py  freetext.py  invites.py  photo.py  projects.py  report.py  start.py
apps/bot/i18n/: __init__.py  en.json  ru.json
apps/web/: .dockerignore  Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/login/: actions.ts  page.tsx
apps/web/app/projects/: actions.ts  layout.tsx  page.tsx
apps/web/app/projects/[id]/: page.tsx
apps/web/app/projects/[id]/download/: route.ts
apps/web/components/: CategoryPie.tsx  DailyLine.tsx  ExpensesTable.tsx
apps/web/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  table.tsx
apps/web/lib/: api.ts  auth.ts  format.ts  types.ts
apps/worker/: Dockerfile  celery_app.py
apps/worker/tasks/: ocr.py  reports.py
deploy/: Caddyfile  README.md  backup.sh
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_cascade.py  0003_invite_quota.py
scripts/: probe_mimo.py  seed_dev.py
tests/: conftest.py
tests/integration/: test_api.py  test_bot_invite_flow.py  test_models.py
tests/unit/bot/: test_drafts.py  test_expenses_dialog.py  test_freetext.py  test_fsm_safety.py  test_i18n.py  test_invite_args.py  test_keyboards.py  test_newproject.py  test_photo_handler_di.py
tests/unit/domain/: test_currency.py  test_parsers.py  test_quota.py  test_reports.py
tests/unit/llm/: test_mimo_provider.py  test_router_fallback.py
tests/unit/worker/: test_ocr_task_failures.py
