[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stager"
version = "0.1.0"
description = "Multi-tenant project expense tracker for home-staging — Telegram bot + Next.js admin"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ilia Malkin", email = "ilyamalkinn@gmail.com" }]

dependencies = [
    # Все три процесса хотят БД + Redis + logging + Sentry — общая база.
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "sentry-sdk>=2.13",
    "tenacity>=8.5",
    "httpx>=0.27",
    "minio>=7.2",
    "google-genai>=0.3",
    # Bot
    "aiogram>=3.5,<4.0",
    # API
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt,argon2]>=1.7",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "email-validator>=2.2",
    # Worker
    "celery>=5.4",
    # Reports
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "testcontainers[postgres,redis]>=4.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-passlib",
    "types-python-jose",
]

[project.scripts]
stager-bot = "apps.bot.main:run"
stager-api = "apps.api.main:run"
stager-cli = "apps.api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is fine

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Не мучаем тесты и миграции strict-проверками
exclude = ["migrations/", "tests/"]

[[tool.mypy.overrides]]
module = ["apps.bot.handlers.*", "apps.worker.tasks.*"]
# Aiogram/Celery decorator-magic ломает строгие проверки. Реальный
# strict-режим в этих модулях даст 50+ ложных срабатываний.
disallow_untyped_decorators = false
disable_error_code = ["misc", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=apps --cov=packages --cov-report=term-missing"
