[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stager"
version = "0.1.0"
description = "Multi-tenant project expense tracker for home-staging — Telegram bot + Next.js admin"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ilia Malkin", email = "ilyamalkinn@gmail.com" }]

dependencies = [
    # Все три процесса хотят БД + Redis + logging + Sentry — общая база.
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "sentry-sdk>=2.13",
    "tenacity>=8.5",
    "httpx>=0.27",
    "minio>=7.2",
    "google-genai>=0.3",
    # Bot
    "aiogram>=3.5,<4.0",
    # API
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt,argon2]>=1.7",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "email-validator>=2.2",
    # Worker
    "celery>=5.4",
    # Reports
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "testcontainers[postgres,redis]>=4.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-passlib",
    "types-python-jose",
]

[project.scripts]
stager-bot = "apps.bot.main:run"
stager-api = "apps.api.main:run"
stager-cli = "apps.api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = [
    "B008",       # FastAPI Depends() в default — норма
    "E501",       # длина строк: русский текст раздувает символы
    "RUF001",     # cyrillic в строковом литерале — UX на русском
    "RUF002",     # cyrillic в docstring
    "RUF003",     # cyrillic в комментарии
    "RUF022",     # сортировка __all__ — не критично на MVP
    "RUF046",     # cast(int, x) когда x уже int — стилистика
    "RUF059",     # unused unpacked в tuple — норм для тестов
    "RUF100",     # unused noqa — мигрирует между версиями ruff
    "I001",       # порядок импортов — не блокер CI
    "UP017",      # datetime.UTC alias — стилистика
    "UP035",      # collections.abc вместо typing — стилистика
    "UP037",      # quotes в type annotations — стилистика
    "ASYNC109",   # timeout-параметр в async-функции — наш кастомный таймаут
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"migrations/**" = ["E501"]
"scripts/**" = ["ASYNC240"]  # one-off CLI пробники, не обязаны быть pure-async

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# MVP-режим: проверяем что код в принципе типизируется, без strict-нытья.
# Включим strict когда базовый flow стабилизируется.
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disable_error_code = ["misc", "arg-type", "no-any-return", "no-untyped-def", "type-arg"]
exclude = ["migrations/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Один event loop на всю сессию — иначе module-level async engines в боте/api
# плодят "Future attached to a different loop" между тестами.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=apps --cov=packages --cov-report=term-missing"
